codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 11737
expression: rendered
---
• Reviewing 2 approval requests (0s • esc to interrupt)
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'


› Ask Codex to do anything

  ? for shortcuts                                    100% context left
