codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 7798
expression: exec_blob
---
• Failed 1 · 1 commands · sleep 1 · 0ms total
