codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__live_app_server_command_execution_strips_shell_wrapper.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 4790
expression: blob
---
• You ran 1 · 1 commands · python3 -c 'print("Hello, world!")' · 5ms total
