codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 9735
expression: popup
---
  Select Model and Effort
  Access legacy models by running ikuncodex -m <model_name> or in your config.

› 1. test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
