codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__model_selection_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 9638
expression: popup
---
  Select Model and Effort
  Access legacy models by running ikuncodex -m <model_name> or in your config.

  1. gpt-5.3-codex (default)  Latest frontier agentic coding model.
  2. gpt-5.4                  Latest frontier agentic coding model.
  3. gpt-5.2-codex            Frontier agentic coding model.
  4. gpt-5.1-codex-max        Codex-optimized flagship for deep and fast
                              reasoning.
  5. gpt-5.1-codex            Optimized for codex.
  6. gpt-5.2                  Latest frontier model with improvements across
                              knowledge, reasoning and coding
  7. gpt-5.1                  Broad world knowledge with strong general
                              reasoning.
› 8. gpt-5-codex (current)    Optimized for codex.

  Press enter to select reasoning effort, or esc to dismiss.
