codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__unified_exec_unknown_end_with_active_exploring_cell.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 6414
expression: snapshot
---
History:
• Ran 1 · 1 commands · echo repro-marker · 5ms total

Active:
• Exploring
  └ Read null
