codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__user_shell_ls_output.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 10084
expression: blob
---
• You ran 1 · 1 commands · ls · 5ms total
